// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eek > renders default eek 1`] = `
<span
  aria-hidden="true"
>
  A+++
</span>
`;

exports[`eek > renders default eek 2`] = `
<span
  aria-hidden="true"
>
  D
</span>
`;

exports[`eek > renders default eek 3`] = `
<span
  aria-hidden="true"
  class="eek__rating"
>
  B
</span>
`;

exports[`eek > renders default eek 4`] = `
<div
  aria-label="A+++ - D. Rating B"
  class="eek eek--rating-5"
  role="figure"
>
  <div
    aria-hidden="true"
    class="eek__container"
  >
    <span
      class="eek__rating-range"
    >
      <span
        aria-hidden="true"
      >
        A+++
      </span>
      <svg
        aria-hidden="true"
        class="icon icon--eek-range-arrow"
      >
        <symbol
          id="icon-eek-range-arrow"
          viewBox="0 0 5 6"
        >
          <path
            clip-rule="evenodd"
            d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
            fill="black"
            fill-rule="evenodd"
          />
        </symbol>
        <use
          href="#icon-eek-range-arrow"
        />
      </svg>
      <!--M_*3 #svg/0-->
      <span
        aria-hidden="true"
      >
        D
      </span>
    </span>
    <span
      aria-hidden="true"
      class="eek__rating"
    >
      B
    </span>
  </div>
  <svg
    aria-hidden="true"
    class="icon icon--eek-arrow"
  >
    <symbol
      id="icon-eek-arrow"
      viewBox="0 0 11 28"
    >
      <path
        d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
        stroke="black"
        stroke-width="1"
      />
    </symbol>
    <use
      href="#icon-eek-arrow"
    />
  </svg>
  <!--M_*5 #svg/0-->
</div>
`;

exports[`eek > renders invalid eek 1`] = `
<span
  aria-hidden="true"
>
  A
</span>
`;

exports[`eek > renders invalid eek 2`] = `
<span
  aria-hidden="true"
>
  D
</span>
`;

exports[`eek > renders invalid eek 3`] = `
<span
  aria-hidden="true"
  class="eek__rating"
>
  B
</span>
`;

exports[`eek > renders invalid eek 4`] = `
<div
  aria-label="A+++ - D. Rating B"
  class="eek"
  role="figure"
>
  <div
    aria-hidden="true"
    class="eek__container"
  >
    <span
      class="eek__rating-range"
    >
      <span
        aria-hidden="true"
      >
        A
      </span>
      <svg
        aria-hidden="true"
        class="icon icon--eek-range-arrow"
      >
        <symbol
          id="icon-eek-range-arrow"
          viewBox="0 0 5 6"
        >
          <path
            clip-rule="evenodd"
            d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
            fill="black"
            fill-rule="evenodd"
          />
        </symbol>
        <use
          href="#icon-eek-range-arrow"
        />
      </svg>
      <!--M_*3 #svg/0-->
      <span
        aria-hidden="true"
      >
        D
      </span>
    </span>
    <span
      aria-hidden="true"
      class="eek__rating"
    >
      B
    </span>
  </div>
  <svg
    aria-hidden="true"
    class="icon icon--eek-arrow"
  >
    <symbol
      id="icon-eek-arrow"
      viewBox="0 0 11 28"
    >
      <path
        d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
        stroke="black"
        stroke-width="1"
      />
    </symbol>
    <use
      href="#icon-eek-arrow"
    />
  </svg>
  <!--M_*5 #svg/0-->
</div>
`;

exports[`eek > renders large eek 1`] = `
<span
  aria-hidden="true"
>
  A+++
</span>
`;

exports[`eek > renders large eek 2`] = `
<span
  aria-hidden="true"
>
  D
</span>
`;

exports[`eek > renders large eek 3`] = `
<span
  aria-hidden="true"
  class="eek__rating"
>
  B
</span>
`;

exports[`eek > renders large eek 4`] = `
<div
  aria-label="A+++ - D. Rating B"
  class="eek eek--rating-5 eek--large"
  role="figure"
>
  <div
    aria-hidden="true"
    class="eek__container"
  >
    <span
      class="eek__rating-range"
    >
      <span
        aria-hidden="true"
      >
        A+++
      </span>
      <svg
        aria-hidden="true"
        class="icon icon--eek-range-arrow"
      >
        <symbol
          id="icon-eek-range-arrow"
          viewBox="0 0 5 6"
        >
          <path
            clip-rule="evenodd"
            d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
            fill="black"
            fill-rule="evenodd"
          />
        </symbol>
        <use
          href="#icon-eek-range-arrow"
        />
      </svg>
      <!--M_*3 #svg/0-->
      <span
        aria-hidden="true"
      >
        D
      </span>
    </span>
    <span
      aria-hidden="true"
      class="eek__rating"
    >
      B
    </span>
  </div>
  <svg
    aria-hidden="true"
    class="icon icon--eek-arrow"
  >
    <symbol
      id="icon-eek-arrow"
      viewBox="0 0 11 28"
    >
      <path
        d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
        stroke="black"
        stroke-width="1"
      />
    </symbol>
    <use
      href="#icon-eek-arrow"
    />
  </svg>
  <!--M_*5 #svg/0-->
</div>
`;

exports[`eek > renders rating 1 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. A++"
    class="eek eek--rating-1"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        A++
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 2 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. A+"
    class="eek eek--rating-2"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        A+
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 3 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. A"
    class="eek eek--rating-3"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        A
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 4 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. B"
    class="eek eek--rating-4"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        B
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 5 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. C"
    class="eek eek--rating-5"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        C
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 6 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. D"
    class="eek eek--rating-6"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        D
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 7 (not 8) 1`] = `
<DocumentFragment>
  <div
    aria-label="G - A++. F"
    class="eek eek--rating-7"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          G
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        F
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 7 (not 8) 2`] = `
<DocumentFragment>
  <div
    aria-label="G - A++. G"
    class="eek eek--rating-7"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          G
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        G
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders rating 7 1`] = `
<DocumentFragment>
  <div
    aria-label="E - A++. E"
    class="eek eek--rating-7"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A++
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          E
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        E
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;

exports[`eek > renders the correct eek if rating is outside 1`] = `
<DocumentFragment>
  <div
    aria-label="D - A+. A++"
    class="eek"
    role="figure"
  >
    <div
      aria-hidden="true"
      class="eek__container"
    >
      <span
        class="eek__rating-range"
      >
        <span
          aria-hidden="true"
        >
          A+
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--eek-range-arrow"
        >
          <symbol
            id="icon-eek-range-arrow"
            viewBox="0 0 5 6"
          >
            <path
              clip-rule="evenodd"
              d="M2.32203 0.108736L1.0202 2.6473C0.951945 2.78038 1.04859 2.93856 1.19816 2.93856H1.95692V5.99786H3.04303V2.93856H3.80182C3.95139 2.93856 4.04804 2.78038 3.97979 2.6473L2.67796 0.108736C2.60361 -0.0362453 2.39638 -0.0362455 2.32203 0.108736Z"
              fill="black"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-eek-range-arrow"
          />
        </svg>
        <span
          aria-hidden="true"
        >
          D
        </span>
      </span>
      <span
        aria-hidden="true"
        class="eek__rating"
      >
        A++
      </span>
    </div>
    <svg
      aria-hidden="true"
      class="icon icon--eek-arrow"
    >
      <symbol
        id="icon-eek-arrow"
        viewBox="0 0 11 28"
      >
        <path
          d="M0 27.75H1.13239C1.76009 27.75 2.35161 27.4145 2.73099 26.8434L10.342 15.3851C10.886 14.5662 10.886 13.4338 10.342 12.6149L2.73099 1.15661C2.35161 0.585476 1.76009 0.25 1.13239 0.25H3.09944e-06"
          stroke="black"
          stroke-width="1"
        />
      </symbol>
      <use
        href="#icon-eek-arrow"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,{htmlInput:{}},1,{htmlInput:{}},1,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",3,5,"src/tags/evo-eek/index.marko_0_htmlInput",1];M._.w()
  </script>
</DocumentFragment>
`;
